--- a/less/style.less
+++ b/less/style.less
@@ -5,3 +5,83 @@ body {
 	max-width: 1500px;
 	line-height: 12px;
 }
+.top-wrapper {
+	width: 100%;
+	background: #abeafa;
+
+	header,
+	.top-wrapper_center{
+		max-width: 1170px;
+		margin: 0 auto;
+		overflow: hidden;
+	}
+}
+
+header {
+	.logo {
+		float: left;
+
+		img {
+			margin: 25px 0 0 69px;
+		}
+	}
+
+	.social-icon {
+		float: right;
+		font-size: 0;
+		margin: 50px 16px 0 0px;
+
+		a {
+			margin-right: 11px; 
+		}
+		
+		i {	
+			display: inline-block;
+			width: 16px;
+			height: 16px;			
+		}
+
+		.social__fb i {
+			background: url(../img/fb_icon.png) 0 0 no-repeat;
+			width: 12px;
+		}
+		.social__tw i {
+			background: url(../img/tw_icon.png) 0 0 no-repeat;
+		}
+		.social__yt i {
+			background: url(../img/yt_icon.png) 0 0 no-repeat;
+		}
+		.social__pin i {
+			background: url(../img/pin_icon.png) 0 0 no-repeat;
+		}
+		.social__ins i {
+			background: url(../img/inst_icon.png) 0 0 no-repeat;
+		}
+
+		select {
+			border: none;
+			background: transparent;
+			.raleway;
+			font-size: 10px;
+			color: #fff;
+			font-weight: bold;
+			padding: 3px 0px 0 0;
+    		vertical-align: top;
+    		width: 36px;
+		}
+	}
+}
+
+.top-wrapper_center {
+
+	.cart__block {
+		float: left;
+		width: 23%;
+	}
+
+	.responsive-slider {
+		float: right;
+		width: 74%;
+	}
+
+}
