--- a/css/responsive-slider.css
+++ b/css/responsive-slider.css
@@ -1,3 +1,11 @@
+.raleway {
+  font-family: 'Raleway', sans-serif;
+}
+.text-hide {
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+}
 .responsive-slider {
   max-width: 870px;
   position: relative;
