--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,12 @@
 .raleway {
 	font-family: 'Raleway', sans-serif;
 }
-//font-family: 'Roboto', sans-serif;
+.roboto {
+	font-family: 'Roboto', sans-serif;
+}
+
+@bg-main: #abeafa;
+@control-color-hover: #fbde06;
 
 .text-hide {
    text-indent: 100%;
