--- a/less/responsive-slider.less
+++ b/less/responsive-slider.less
@@ -8,7 +8,7 @@
     opacity: 0;
   }
   
-  .slides {
+  .slides { 
     position: relative;
     overflow: hidden;
     
@@ -26,7 +26,7 @@
           display: inline-block;
           position: relative;
           width: 100%;
-          overflow: hidden;                  
+          overflow: hidden; 
         }
       }
     }
@@ -35,30 +35,32 @@
   .slider-control {
     position: absolute;
     top: 40%;
-    background-color: rgba(255, 255, 255, 0.5);
     padding: 31px 17px;
     
     
     &.left {
-      left: 0;
+      right: 5%;
       top: 45%;
-      background: #000;
-      
+      background: rgba(255, 255, 255, 1) url(../img/control-arrow.png) 50% 50% no-repeat;   
+
       &:hover {
         text-decoration: none;
-        opacity: 0.5;
+        background: @control-color-hover url(../img/control-arrow.png) 50% 50% no-repeat;
       }
     }
     
     &.right {
       right: 0;
       top: 45%;
-      background: #000;
+      background: rgba(255, 255, 255, 1) url(../img/control-arrow.png) 50% 50% no-repeat; 
+      -ms-transform: rotate(180deg); 
+      -webkit-transform: rotate(180deg); 
+      transform: rotate(180deg); 
       
       
       &:hover {
         text-decoration: none;
-         opacity: 0.5;
+        background: @control-color-hover url(../img/control-arrow.png) 50% 50% no-repeat;
       }
     }
 
