--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,83 @@
   white-space: nowrap;
   overflow: hidden;
 }
+/* Wobble Vertical  Animation*/
+.wobble-vertical {
+  display: inline-block;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.wobble-vertical:hover {
+  -webkit-animation-name: wobble-vertical;
+  animation-name: wobble-vertical;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+}
+@-webkit-keyframes wobble-vertical {
+  16.65% {
+    -webkit-transform: translateY(8px);
+    transform: translateY(8px);
+  }
+  33.3% {
+    -webkit-transform: translateY(-6px);
+    transform: translateY(-6px);
+  }
+  49.95% {
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+  }
+  66.6% {
+    -webkit-transform: translateY(-2px);
+    transform: translateY(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateY(1px);
+    transform: translateY(1px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+@keyframes wobble-vertical {
+  16.65% {
+    -webkit-transform: translateY(8px);
+    -ms-transform: translateY(8px);
+    transform: translateY(8px);
+  }
+  33.3% {
+    -webkit-transform: translateY(-6px);
+    -ms-transform: translateY(-6px);
+    transform: translateY(-6px);
+  }
+  49.95% {
+    -webkit-transform: translateY(4px);
+    -ms-transform: translateY(4px);
+    transform: translateY(4px);
+  }
+  66.6% {
+    -webkit-transform: translateY(-2px);
+    -ms-transform: translateY(-2px);
+    transform: translateY(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateY(1px);
+    -ms-transform: translateY(1px);
+    transform: translateY(1px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
 body {
   max-width: 1500px;
 }
@@ -33,6 +110,7 @@ header .social-icon {
   float: right;
   font-size: 0;
   margin: 50px 16px 0 0px;
+  /* Wobble Vertical */
 }
 header .social-icon a {
   margin-right: 11px;
@@ -57,6 +135,82 @@ header .social-icon .social__pin i {
 }
 header .social-icon .social__ins i {
   background: url(../img/inst_icon.png) 0 0 no-repeat;
+}
+header .social-icon .wobble-vertical {
+  display: inline-block;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+header .social-icon .wobble-vertical:hover {
+  -webkit-animation-name: wobble-vertical;
+  animation-name: wobble-vertical;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+}
+@-webkit-keyframes wobble-vertical {
+  16.65% {
+    -webkit-transform: translateY(8px);
+    transform: translateY(8px);
+  }
+  33.3% {
+    -webkit-transform: translateY(-6px);
+    transform: translateY(-6px);
+  }
+  49.95% {
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+  }
+  66.6% {
+    -webkit-transform: translateY(-2px);
+    transform: translateY(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateY(1px);
+    transform: translateY(1px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+@keyframes wobble-vertical {
+  16.65% {
+    -webkit-transform: translateY(8px);
+    -ms-transform: translateY(8px);
+    transform: translateY(8px);
+  }
+  33.3% {
+    -webkit-transform: translateY(-6px);
+    -ms-transform: translateY(-6px);
+    transform: translateY(-6px);
+  }
+  49.95% {
+    -webkit-transform: translateY(4px);
+    -ms-transform: translateY(4px);
+    transform: translateY(4px);
+  }
+  66.6% {
+    -webkit-transform: translateY(-2px);
+    -ms-transform: translateY(-2px);
+    transform: translateY(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateY(1px);
+    -ms-transform: translateY(1px);
+    transform: translateY(1px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
 }
 header .social-icon select {
   border: none;
@@ -194,9 +348,22 @@ header .social-icon select option {
 .user__basket .cart__info {
   font-size: 10px;
   font-weight: 400;
-  text-decoration: none;
   text-transform: uppercase;
+  overflow: hidden;
+}
+.user__basket .cart__info .view__cart,
+.user__basket .cart__info .checkout {
+  width: 50%;
+  padding: 11px 0px 8px 0px;
+  text-decoration: none;
   color: #fff;
+  display: block;
+  text-align: center;
+  float: left;
+}
+.user__basket .cart__info .view__cart:hover,
+.user__basket .cart__info .checkout:hover {
+  text-decoration: underline;
 }
 .user__basket .cart__info .view__cart {
   background: #ee4a02;
@@ -206,12 +373,41 @@ header .social-icon select option {
 }
 .user__basket .search__cart {
   background: #e9e9e9;
+  color: #0c0c0c;
+  overflow: hidden;
 }
 .user__basket .search__cart .search {
+  height: 34px;
   background: #e9e9e9;
   border: none;
   color: #0c0c0c;
   font-size: 10px;
   font-weight: 400;
   text-transform: uppercase;
+  padding: 13px 0 12px 14px;
+}
+.user__basket .search__cart button {
+  float: right;
+  width: 34px;
+  height: 34px;
+  background: #333 url(../img/search-button-icon.png) 50% 50% no-repeat;
+  border: none;
+  cursor: pointer;
+}
+.box__welcome {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  padding: 79px 25px 82px 21px;
+  background: #fff51f;
+}
+.box__welcome h2 {
+  font-size: 30px;
+  text-transform: uppercase;
+  line-height: 30px;
+  padding: 0 0 21px 4px;
+}
+.box__welcome p {
+  font-size: 18px;
+  font-style: italic;
+  line-height: 14px;
 }
