--- a/less/style.less
+++ b/less/style.less
@@ -32,9 +32,9 @@ header {
 		margin: 50px 16px 0 0px;
 
 		a {
-			margin-right: 11px; 
+			margin-right: 11px;
 		}
-		
+
 		i {	
 			display: inline-block;
 			width: 16px;
@@ -56,6 +56,98 @@ header {
 		}
 		.social__ins i {
 			background: url(../img/inst_icon.png) 0 0 no-repeat;
+		}
+
+		.wobble-vertical {
+			display: inline-block;
+		    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+		    -webkit-transform: translateZ(0);
+		    -ms-transform: translateZ(0);
+		    transform: translateZ(0);
+		    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+		}
+
+		.wobble-vertical:hover {
+			-webkit-animation-name: wobble-vertical;
+		    animation-name: wobble-vertical;
+		    -webkit-animation-duration: 1s;
+		    animation-duration: 1s;
+		    -webkit-animation-timing-function: ease-in-out;
+		    animation-timing-function: ease-in-out;
+		    -webkit-animation-iteration-count: 1;
+		    animation-iteration-count: 1;
+		}
+
+		/* Wobble Vertical */
+
+		@-webkit-keyframes wobble-vertical {
+		  16.65% {
+		    -webkit-transform: translateY(8px);
+		    transform: translateY(8px);
+		  }
+
+		  33.3% {
+		    -webkit-transform: translateY(-6px);
+		    transform: translateY(-6px);
+		  }
+
+		  49.95% {
+		    -webkit-transform: translateY(4px);
+		    transform: translateY(4px);
+		  }
+
+		  66.6% {
+		    -webkit-transform: translateY(-2px);
+		    transform: translateY(-2px);
+		  }
+
+		  83.25% {
+		    -webkit-transform: translateY(1px);
+		    transform: translateY(1px);
+		  }
+
+		  100% {
+		    -webkit-transform: translateY(0);
+		    transform: translateY(0);
+		  }
+		}
+
+		@keyframes wobble-vertical {
+		  16.65% {
+		    -webkit-transform: translateY(8px);
+		    -ms-transform: translateY(8px);
+		    transform: translateY(8px);
+		  }
+
+		  33.3% {
+		    -webkit-transform: translateY(-6px);
+		    -ms-transform: translateY(-6px);
+		    transform: translateY(-6px);
+		  }
+
+		  49.95% {
+		    -webkit-transform: translateY(4px);
+		    -ms-transform: translateY(4px);
+		    transform: translateY(4px);
+		  }
+
+		  66.6% {
+		    -webkit-transform: translateY(-2px);
+		    -ms-transform: translateY(-2px);
+		    transform: translateY(-2px);
+		  }
+
+		  83.25% {
+		    -webkit-transform: translateY(1px);
+		    -ms-transform: translateY(1px);
+		    transform: translateY(1px);
+		  }
+
+		  100% {
+		    -webkit-transform: translateY(0);
+		    -ms-transform: translateY(0);
+		    transform: translateY(0);
+		  }
 		}
 
 		select {
@@ -225,30 +317,77 @@ header {
 	
 	.cart__info {
 		font-size: 10px;
-		font-weight: 400;
-	    text-decoration: none;
+		font-weight: 400;	    
     	text-transform: uppercase;
-    	color: #fff;
+    	overflow: hidden;
+    	
+    	.view__cart,
+    	.checkout {
+    		width: 50%;
+			padding: 11px 0px 8px 0px;	
+			text-decoration: none;
+			color: #fff;
+			display: block;
+			text-align: center;
+			float: left;
 
-		.view__cart{
-			background: #ee4a02;
+			&:hover {
+				text-decoration: underline;
+			}
 		}
 
-		.checkout{
+		.view__cart {			
+			background: #ee4a02;			
+		}
+
+		.checkout {
 			background: #e24602;
 		}
 	}
 
 	.search__cart {
 		background: #e9e9e9;
+		color: #0c0c0c;
+		overflow: hidden;
 
 		.search {
+			height: 34px;
 			background: #e9e9e9;
 			border: none;
 			color: #0c0c0c;
 			font-size: 10px;
 			font-weight: 400;
 			text-transform: uppercase;
+			padding: 13px 0 12px 14px;
 		}
+
+		button {
+			float: right;
+			width: 34px;
+			height: 34px;
+			background: #333 url(../img/search-button-icon.png) 50% 50% no-repeat;
+			border: none;
+			cursor: pointer;
+		}
+	}
+}
+
+.box__welcome {
+	.raleway;
+	font-weight: bold;
+	padding: 79px 25px 82px 21px;
+	background: #fff51f;
+
+	h2 {
+		font-size: 30px;
+		text-transform: uppercase;
+		line-height: 30px;
+		padding: 0 0 21px 4px;
+	}
+
+	p {
+		font-size: 18px;
+		font-style: italic;
+		line-height: 14px;
 	}
 }
