--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,6 @@ header .social-icon {
   float: right;
   font-size: 0;
   margin: 50px 16px 0 0px;
-  /* Wobble Vertical */
 }
 header .social-icon a {
   margin-right: 11px;
@@ -135,82 +134,6 @@ header .social-icon .social__pin i {
 }
 header .social-icon .social__ins i {
   background: url(../img/inst_icon.png) 0 0 no-repeat;
-}
-header .social-icon .wobble-vertical {
-  display: inline-block;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-}
-header .social-icon .wobble-vertical:hover {
-  -webkit-animation-name: wobble-vertical;
-  animation-name: wobble-vertical;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-}
-@-webkit-keyframes wobble-vertical {
-  16.65% {
-    -webkit-transform: translateY(8px);
-    transform: translateY(8px);
-  }
-  33.3% {
-    -webkit-transform: translateY(-6px);
-    transform: translateY(-6px);
-  }
-  49.95% {
-    -webkit-transform: translateY(4px);
-    transform: translateY(4px);
-  }
-  66.6% {
-    -webkit-transform: translateY(-2px);
-    transform: translateY(-2px);
-  }
-  83.25% {
-    -webkit-transform: translateY(1px);
-    transform: translateY(1px);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-}
-@keyframes wobble-vertical {
-  16.65% {
-    -webkit-transform: translateY(8px);
-    -ms-transform: translateY(8px);
-    transform: translateY(8px);
-  }
-  33.3% {
-    -webkit-transform: translateY(-6px);
-    -ms-transform: translateY(-6px);
-    transform: translateY(-6px);
-  }
-  49.95% {
-    -webkit-transform: translateY(4px);
-    -ms-transform: translateY(4px);
-    transform: translateY(4px);
-  }
-  66.6% {
-    -webkit-transform: translateY(-2px);
-    -ms-transform: translateY(-2px);
-    transform: translateY(-2px);
-  }
-  83.25% {
-    -webkit-transform: translateY(1px);
-    -ms-transform: translateY(1px);
-    transform: translateY(1px);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    transform: translateY(0);
-  }
 }
 header .social-icon select {
   border: none;
@@ -410,4 +333,56 @@ header .social-icon select option {
   font-size: 18px;
   font-style: italic;
   line-height: 14px;
+}
+aside {
+  /*VERTICAL MENU*/
+  /* ALL UL */
+  /* ALL LI */
+  /* ALL A */
+  /* ALL A HOVER */
+  /* INNER UL HIDE */
+  /* INNER UL SHOW */
+}
+aside nav.vertical {
+  position: relative;
+  width: 200px;
+}
+aside nav.vertical ul {
+  list-style: none;
+}
+aside nav.vertical li {
+  position: relative;
+}
+aside nav.vertical a {
+  display: block;
+  color: #eee;
+  text-decoration: none;
+  padding: 10px 15px;
+  background: #667;
+  transition: 0.2s;
+}
+aside nav.vertical li:hover > a {
+  background: #778;
+}
+aside nav.vertical ul ul {
+  position: absolute;
+  left: 0%;
+  top: 0;
+  width: 100%;
+  visibility: hidden;
+  opacity: 0;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
+  -webkit-transform: translateX(50px);
+      -ms-transform: translateX(50px);
+          transform: translateX(50px);
+}
+aside nav.vertical li:hover > ul {
+  left: 100%;
+  visibility: visible;
+  opacity: 1;
+  -webkit-transform: translateX(0px);
+      -ms-transform: translateX(0px);
+          transform: translateX(0px);
 }
