--- a/less/style.less
+++ b/less/style.less
@@ -198,7 +198,7 @@ header {
 				text-align: center;
 				text-decoration: none;
 				text-transform: uppercase;
-				color: #333;
+				color: @main-font-color;
 				font-size: 10px;
 			}
 
@@ -273,7 +273,7 @@ header {
 			float: right;
 			width: 34px;
 			height: 34px;
-			background: #333 url(../img/search-button-icon.png) 50% 50% no-repeat;
+			background: @main-font-color url(../img/search-button-icon.png) 50% 50% no-repeat;
 			border: none;
 			cursor: pointer;
 		}
@@ -301,15 +301,21 @@ header {
 }
 
 .main-wrap {
+	max-width: 1500px;
+	background: #f8f8f8;
 
 	.main {
+		max-width: 1170px;
+		margin: -20px auto 0;
 
 		aside {
-
+			float: left;
+			width: 23%;
 		}
 
 		.products {
-
+			float: right;
+			width: 74%;
 		}
 
 		.bottom__content {
@@ -322,21 +328,36 @@ aside {
 	/*VERTICAL MENU*/
 	.vertical {
 	  	position: relative;
-	  	width: 200px;
+	  	width: 100%;
+	  	.roboto;
+	  	font-weight: 900;
+	  	font-size: 14px;
+	  	text-transform: uppercase;
+
+	  	h2 {
+  		    padding: 29px 0 20px 42px;
+			color: #fff;
+			background: @main-font-color;
+			font-weight: 700;
+	  	}
 
 		/* ALL UL */
+		.first-level > li > a {
+			padding-left: 40px;
+		}
+
 		.first-level,
 		.second-level,
 		.third-level {
 		    list-style: none;
 		    background: #26d2fc;
-
+		
 		    .second-level {
 			    background: #75e3fe;
 			    list-style: square;	
 
 			    li:hover > a {
-			    	background: url(../img/arrow-list.png) 0 0 no-repeat;
+			    	background: url(../img/arrow-list.png) 100% 0 no-repeat;
 				}
 		    }
 
@@ -351,7 +372,7 @@ aside {
 				position: absolute;
 				left: 0%;
 				top: 0;
-				width: 100%;
+				width: 70%;
 				visibility: hidden;
 				opacity: 0;
 				transition: transform 0.2s;
@@ -361,10 +382,12 @@ aside {
 		/* ALL LI */
 		li {
 		    position: relative;
+		    padding: 10px 15px 10px 3px;
+		    color: @main-font-color;
 
 			/* INNER UL SHOW */
 			&:hover > ul {
-			    padding-left: 31px;
+			    padding-left: 28px;
     			left: 100%;
 			    visibility: visible;
 			    opacity: 1;
@@ -375,14 +398,71 @@ aside {
 		/* ALL A */
 		a {
 		    display: block;
-		    color: #eee;
 		    text-decoration: none;
-		    padding: 10px 15px;
 		    transition: 0.2s;
+	        color: @main-font-color;
 		}
 
 		.first-level > li:hover {
-			background: #333;
+			background: @main-font-color;
+		}
+
+		.first-level > li:hover > a {
+			color: #fff;
+		}
+	}
+
+	.banner__block {
+		margin: 33px 0 0 0;
+		width: 49%;
+		padding: 45.5% 0 68px 51.48%;
+		background: #e0e0e0;
+		color: @main-font-color;
+		.raleway;
+		font-weight: 900;
+		font-size: 36px;
+		line-height: 36px;
+		text-transform: uppercase;
+		font-style: italic;
+	}
+
+	.tags__block {
+		width: 100%;
+		overflow: hidden;
+		background: #fff;
+		padding: 33px 30px;
+		.roboto;
+
+		h2 {
+			font-size: 24px;
+			font-weight: 900;
+			font-style: italic;
+			color: #000;
+			padding-left: 4px;
+		}
+
+		.tags__inner {
+
+			.active {
+				background: #faef03;				
+			}
+
+			a {
+				.roboto;
+				display: inline-block;
+				padding: 10px 11px 7px;
+				background: #e9e9e9;
+				font-size: 12px;
+				color: @main-font-color;
+				font-weight: 400;
+				text-decoration: none;
+				margin: 3px 2px 3px;
+
+				&:hover {
+					padding: 10px 30px 8px;
+					font-size: 14px;
+				}
+			}		
 		}
 	}
 }
