--- a/less/variables.less
+++ b/less/variables.less
@@ -7,13 +7,7 @@
 
 @bg-main: #abeafa;
 @control-color-hover: #fbde06;
-
-.text-hide {
-   text-indent: 100%;
-   white-space: nowrap;
-   overflow: hidden;
-}
-
+@main-font-color: #333;
 
 /* Wobble Vertical  Animation*/
 .wobble-vertical {
