--- a/less/style.less
+++ b/less/style.less
@@ -80,7 +80,7 @@ header {
 
 	.cart__block {
 		float: left;
-		width: 23%;
+		width: 270px;
 	}
 
 	.container {
@@ -304,18 +304,27 @@ header {
 	max-width: 1500px;
 	background: #f8f8f8;
 
+	.clearfix:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+
 	.main {
 		max-width: 1170px;
-		margin: -20px auto 0;
+		margin: 0 auto;		
 
 		aside {
 			float: left;
-			width: 23%;
+			width: 270px;
+			margin-top: -20px;
 		}
 
 		.products {
 			float: right;
 			width: 74%;
+			margin-top: -20px;
+			background: #f8f8f8;
 		}
 
 		.bottom__content {
@@ -427,18 +436,19 @@ aside {
 	}
 
 	.tags__block {
-		width: 100%;
+		width: 90%;
+		margin-top: 30px;
 		overflow: hidden;
 		background: #fff;
-		padding: 33px 30px;
+		padding: 27px 0 28px 28px;
 		.roboto;
 
 		h2 {
+			padding-bottom: 18px;
 			font-size: 24px;
 			font-weight: 900;
 			font-style: italic;
 			color: #000;
-			padding-left: 4px;
 		}
 
 		.tags__inner {
@@ -450,19 +460,98 @@ aside {
 			a {
 				.roboto;
 				display: inline-block;
-				padding: 10px 11px 7px;
+				padding: 10px 12px 7px;
 				background: #e9e9e9;
 				font-size: 12px;
 				color: @main-font-color;
 				font-weight: 400;
 				text-decoration: none;
-				margin: 3px 2px 3px;
+				margin: 2px 2px 5px;
 
 				&:hover {
-					padding: 10px 30px 8px;
+					padding: 8px 30px 7px;
 					font-size: 14px;
 				}
 			}		
 		}
+
+		.view__all_link {	
+			width: 41%;
+			display: block;
+			margin: 11px 0 0 2px;
+			font-size: 14px;
+			font-weight: 900;
+			font-style: italic;
+			color: #000;
+			text-decoration: none;
+
+			i {
+				display: block;
+				margin-top: 7px;
+				float: right;
+				width: 20px;
+				height: 5px;
+				background: url(../img/arrow-link.png) 0 0 no-repeat;
+			}
+
+			&:hover {
+				text-decoration: underline;	
+			}
+		}
+	}
+
+	.articles_block {
+		width: 90%;
+		margin: 30px 0;
+		overflow: hidden;
+		background: #fff;
+		padding: 21px 0 21px 31px;
+		.roboto;
+
+		h2 {
+			padding-bottom: 18px;
+			font-size: 24px;
+			font-weight: 900;
+			font-style: italic;
+			color: #000;
+		}
+
+	a {
+		.roboto;
+		display: inline-block;
+	    padding: 9px 57px 4px 0px;
+		font-size: 14px;
+		color: @main-font-color;
+		font-weight: 400;
+		text-decoration: none;
+
+			&:hover {
+				text-decoration: underline;	
+			}
+		}
+
+		.view__all_link {	
+			width: 28%;
+			display: block;
+			margin-top: 11px;
+			font-size: 14px;
+			font-weight: 900;
+			font-style: italic;
+			color: #000;
+			text-decoration: none;
+
+			i {
+				display: block;
+				margin-top: 7px;
+				float: right;
+				width: 20px;
+				height: 5px;
+				background: url(../img/arrow-link.png) 0 0 no-repeat;
+			}
+
+			&:hover {
+				text-decoration: underline;	
+			}
+		}	
 	}
 }
