--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -30,13 +30,6 @@
 ===================================*/
 
 .bx-wrapper .bx-viewport {
-	-moz-box-shadow: 0 0 5px #ccc;
-	-webkit-box-shadow: 0 0 5px #ccc;
-	box-shadow: 0 0 5px #ccc;
-	border:  5px solid #fff;
-	left: -5px;
-	background: #fff;
-	
 	/*fix other elements on the page moving (on Chrome)*/
 	-webkit-transform: translatez(0);
 	-moz-transform: translatez(0);
@@ -68,6 +61,7 @@
 /* PAGER */
 
 .bx-wrapper .bx-pager {
+	display: none;
 	text-align: center;
 	font-size: .85em;
 	font-family: Arial;
@@ -104,31 +98,31 @@
 /* DIRECTION CONTROLS (NEXT / PREV) */
 
 .bx-wrapper .bx-prev {
-	left: 10px;
-	background: url(images/controls.png) no-repeat 0 -32px;
+	right: 60px;
+	background: url(../img/product--slider-arrow.png) no-repeat 0 0;
+	transform: rotate(180deg);
 }
 
 .bx-wrapper .bx-next {
-	right: 10px;
-	background: url(images/controls.png) no-repeat -43px -32px;
+	right: 30px;
+	background: url(../img/product--slider-arrow.png) no-repeat 0 0;
 }
 
 .bx-wrapper .bx-prev:hover {
-	background-position: 0 0;
+	transform: scale(-1.1,-1.1);
 }
 
 .bx-wrapper .bx-next:hover {
-	background-position: -43px 0;
+	transform: scale(1.1,1.1);
 }
 
 .bx-wrapper .bx-controls-direction a {
 	position: absolute;
-	top: 50%;
-	margin-top: -16px;
+	top: -43px;
 	outline: 0;
-	width: 32px;
-	height: 32px;
-	text-indent: -9999px;
+	width: 10px;
+    height: 12px;
+	font-size: 0;
 	z-index: 9999;
 }
 
