--- a/less/style.less
+++ b/less/style.less
@@ -317,13 +317,13 @@ header {
 		aside {
 			float: left;
 			width: 270px;
-			margin-top: -23px;
+			margin-top: -20px;
 		}
 
 		.products {
 			float: right;
 			width: 74%;
-			margin-top: -23px;
+			margin-top: -20px;
 			background: #f8f8f8;
 		}
 
@@ -665,7 +665,7 @@ aside {
 
 		h2 {
 			text-align: center;
-			padding: 36px 0 26px;
+			padding: 50px 0 27px;
 			
 			a {	
 				.roboto;
@@ -675,10 +675,11 @@ aside {
 				font-size: 22px;
 				text-decoration: none;
 				display: block;
-				margin-top: 15px;
-				padding-left: 50px;
+				margin: 0 auto;
+				width: 25%;
 
 				i {
+					float: left;
 					display: block;
 					height: 28px;
 					width: 28px;
@@ -722,6 +723,7 @@ aside {
 
 	.social__links-big {
 		width: 100%;
+		margin-top: 57px;
 		overflow: hidden;
 		display: -ms-flexbox;
 		display: flex;
@@ -734,10 +736,24 @@ aside {
 		.tw-icon-big,
 		.pin-icon-big {
 			display: block;
+			width: 100%;
 			-ms-flex-positive: 1;
 			flex-grow: 1;
-			padding: 30px 15px;
+			padding: 74px 15px;
 			text-align: center;
+			font-size: 0;
+		}
+
+		.fb-icon-big {
+			background: #3b5997 url(../img/fb-icon-big.png) 50% 50% no-repeat;
+		}
+
+		.tw-icon-big {
+			background: #3fccfd url(../img/tw-icon-big.png) 50% 50% no-repeat;
+		}
+
+		.pin-icon-big {
+			background: #cb2027 url(../img/pin-icon-big.png) 50% 50% no-repeat;
 		}
 	}
 }
