--- a/css/style.css
+++ b/css/style.css
@@ -749,6 +749,14 @@ aside .articles_block .view__all_link:hover {
   text-align: center;
   font-size: 0;
 }
+.bottom__content .social__links-big .fb-icon-big:hover,
+.bottom__content .social__links-big .tw-icon-big:hover,
+.bottom__content .social__links-big .pin-icon-big:hover,
+.bottom__content .social__links-big .fb-icon-big:focus,
+.bottom__content .social__links-big .tw-icon-big:focus,
+.bottom__content .social__links-big .pin-icon-big:focus {
+  opacity: 0.7;
+}
 .bottom__content .social__links-big .fb-icon-big {
   background: #3b5997 url(../img/fb-icon-big.png) 50% 50% no-repeat;
 }
@@ -757,4 +765,204 @@ aside .articles_block .view__all_link:hover {
 }
 .bottom__content .social__links-big .pin-icon-big {
   background: #cb2027 url(../img/pin-icon-big.png) 50% 50% no-repeat;
+}
+.footer__wrapper {
+  width: 100%;
+  background: #373737;
+  padding-top: 71px;
+  color: #fff;
+}
+.footer__wrapper footer,
+.footer__wrapper .copyright-wrap p {
+  max-width: 1170px;
+  margin: 0 auto;
+  overflow: hidden;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-direction: row;
+  -webkit-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+  -webkit-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+}
+.footer__wrapper footer .category,
+.footer__wrapper .copyright-wrap p .category {
+  margin-left: 30px;
+}
+.footer__wrapper footer .category,
+.footer__wrapper .copyright-wrap p .category,
+.footer__wrapper footer .our__account,
+.footer__wrapper .copyright-wrap p .our__account,
+.footer__wrapper footer .our__support,
+.footer__wrapper .copyright-wrap p .our__support {
+  -ms-flex-positive: 1;
+  -webkit-flex-grow: 1;
+          flex-grow: 1;
+  width: 140px;
+  margin-right: 30px;
+  overflow: hidden;
+  line-height: 18px;
+}
+.footer__wrapper footer .category h2,
+.footer__wrapper .copyright-wrap p .category h2,
+.footer__wrapper footer .our__account h2,
+.footer__wrapper .copyright-wrap p .our__account h2,
+.footer__wrapper footer .our__support h2,
+.footer__wrapper .copyright-wrap p .our__support h2 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-weight: 800;
+  padding-bottom: 32px;
+}
+.footer__wrapper footer .category a,
+.footer__wrapper .copyright-wrap p .category a,
+.footer__wrapper footer .our__account a,
+.footer__wrapper .copyright-wrap p .our__account a,
+.footer__wrapper footer .our__support a,
+.footer__wrapper .copyright-wrap p .our__support a {
+  display: block;
+  text-align: left;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  color: #fff;
+  text-decoration: none;
+}
+.footer__wrapper footer .category a:hover,
+.footer__wrapper .copyright-wrap p .category a:hover,
+.footer__wrapper footer .our__account a:hover,
+.footer__wrapper .copyright-wrap p .our__account a:hover,
+.footer__wrapper footer .our__support a:hover,
+.footer__wrapper .copyright-wrap p .our__support a:hover,
+.footer__wrapper footer .category a:focus,
+.footer__wrapper .copyright-wrap p .category a:focus,
+.footer__wrapper footer .our__account a:focus,
+.footer__wrapper .copyright-wrap p .our__account a:focus,
+.footer__wrapper footer .our__support a:focus,
+.footer__wrapper .copyright-wrap p .our__support a:focus {
+  text-decoration: underline;
+}
+.footer__wrapper footer .newsletter,
+.footer__wrapper .copyright-wrap p .newsletter {
+  -ms-flex-positive: 2;
+  -webkit-flex-grow: 2;
+          flex-grow: 2;
+  width: 270px;
+  margin-right: 30px;
+  line-height: 18px;
+}
+.footer__wrapper footer .newsletter h2,
+.footer__wrapper .copyright-wrap p .newsletter h2 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 800;
+  padding-bottom: 12px;
+}
+.footer__wrapper footer .newsletter p,
+.footer__wrapper .copyright-wrap p .newsletter p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  color: #fff;
+  line-height: 12px;
+}
+.footer__wrapper footer .newsletter form,
+.footer__wrapper .copyright-wrap p .newsletter form {
+  padding: 20px 0 38px;
+}
+.footer__wrapper footer .newsletter form input[type="email"],
+.footer__wrapper .copyright-wrap p .newsletter form input[type="email"] {
+  border: transparent;
+  background: #fff51f;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #333;
+  padding: 12px 0 10px 21px;
+}
+.footer__wrapper footer .newsletter form button,
+.footer__wrapper .copyright-wrap p .newsletter form button {
+  border: transparent;
+  background: #000;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 12px;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 12px 14px 10px;
+  margin-left: 0;
+}
+.footer__wrapper footer .newsletter form button:hover,
+.footer__wrapper .copyright-wrap p .newsletter form button:hover,
+.footer__wrapper footer .newsletter form button:focus,
+.footer__wrapper .copyright-wrap p .newsletter form button:focus {
+  background: #fff;
+  color: #000;
+}
+.footer__wrapper footer .newsletter form button:active,
+.footer__wrapper .copyright-wrap p .newsletter form button:active {
+  background: #fff;
+  box-shadow: 1px 1px 0 0 #010101 inset, -1px -1px 0 0 #010101 inset;
+}
+.footer__wrapper footer .newsletter .ccard_icons img,
+.footer__wrapper .copyright-wrap p .newsletter .ccard_icons img {
+  display: inline-block;
+}
+.footer__wrapper footer .about__us,
+.footer__wrapper .copyright-wrap p .about__us {
+  -ms-flex-positive: 2;
+  -webkit-flex-grow: 2;
+          flex-grow: 2;
+  width: 202px;
+  line-height: 12px;
+  margin-right: 28px;
+}
+.footer__wrapper footer .about__us h2,
+.footer__wrapper .copyright-wrap p .about__us h2 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 800;
+  padding-bottom: 12px;
+}
+.footer__wrapper footer .about__us p,
+.footer__wrapper .copyright-wrap p .about__us p {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  color: #fff;
+}
+.footer__wrapper footer .about__us .phone,
+.footer__wrapper .copyright-wrap p .about__us .phone {
+  font-size: 14px;
+  line-height: 27px;
+  padding-top: 18px;
+}
+.footer__wrapper footer .about__us .phone span,
+.footer__wrapper .copyright-wrap p .about__us .phone span {
+  padding-right: 18px;
+}
+.footer__wrapper footer .about__us .contact_email,
+.footer__wrapper .copyright-wrap p .about__us .contact_email {
+  line-height: 27px;
+  font-size: 14px;
+}
+.footer__wrapper footer .about__us .contact_email a,
+.footer__wrapper .copyright-wrap p .about__us .contact_email a {
+  color: #ede306;
+  text-transform: none;
+  padding-left: 22px;
+}
+.footer__wrapper .copyright-wrap {
+  width: 100%;
+  background: #333;
+  padding: 22px 0 16px;
+  margin-top: 64px;
+}
+.footer__wrapper .copyright-wrap p {
+  color: #dad9d9;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
 }
