--- a/less/style.less
+++ b/less/style.less
@@ -742,6 +742,11 @@ aside {
 			padding: 74px 15px;
 			text-align: center;
 			font-size: 0;
+
+			&:hover,
+			&:focus {
+				opacity: 0.7;
+			}
 		}
 
 		.fb-icon-big {
@@ -755,5 +760,187 @@ aside {
 		.pin-icon-big {
 			background: #cb2027 url(../img/pin-icon-big.png) 50% 50% no-repeat;
 		}
+	}
+}
+
+.footer__wrapper {
+	width: 100%;
+	background: #373737;
+	padding-top: 71px;
+	color :#fff;
+
+	footer,
+	.copyright-wrap p {
+		max-width: 1170px;
+		margin: 0 auto;
+		overflow: hidden;
+		display: -ms-flexbox;
+		display: flex;
+		-ms-flex-direction: row;
+		flex-direction: row;
+		-ms-flex-wrap: nowrap;
+		flex-wrap: nowrap;
+
+		.category {
+		   margin-left: 30px;
+		}
+
+		.category,
+		.our__account,
+		.our__support {
+			-ms-flex-positive: 1;
+			flex-grow: 1;
+			width: 140px;
+			margin-right: 30px;
+			overflow: hidden;
+			line-height: 18px;
+
+			h2 {
+				.raleway;
+				font-size: 18px;
+				font-weight: 800;
+				padding-bottom: 32px;
+			}
+
+			a {
+				display: block;
+				text-align: left;
+				.roboto;
+				font-size: 12px;
+				color :#fff;
+				text-decoration: none;
+
+				&:hover,
+				&:focus {
+					text-decoration: underline;
+				}
+			}
+			
+		}
+
+		.newsletter {
+			-ms-flex-positive: 2;
+			flex-grow: 2;
+			width: 270px;
+			margin-right: 30px;
+			line-height: 18px;
+
+			h2 {
+				.raleway;
+				font-size: 18px;
+				color :#fff;
+				font-weight: 800;
+				padding-bottom: 12px;
+			}
+
+			p {
+				.roboto;
+				font-size: 12px;
+				color :#fff;
+				line-height: 12px;
+			}
+			
+			form {
+				padding: 20px 0 38px;
+
+				input[type="email"] {
+					border: transparent;
+					background: #fff51f;
+					.roboto;
+					font-weight: 700;
+					font-size: 12px;
+					text-transform: uppercase;
+					color: @main-font-color;
+					padding: 12px 0 10px 21px;
+				}
+
+				button {
+					border: transparent;
+					background: #000;
+					.roboto;
+					font-weight: 700;
+					font-size: 12px;
+					color: #fff;
+					text-transform: uppercase;
+					padding: 12px 14px 10px;
+					margin-left: 0;
+
+					&:hover,
+					&:focus {
+						background: #fff;
+						color: #000;
+					}
+
+					&:active {
+						background: #fff;
+						box-shadow: 1px 1px 0 0 #010101 inset, -1px -1px 0 0 #010101 inset ;
+					}
+				}
+			}
+
+			.ccard_icons {
+				img {
+					display: inline-block;
+				}
+			}
+		}
+		
+		.about__us {
+			-ms-flex-positive: 2;
+			flex-grow: 2;
+		    width: 202px;
+		    line-height: 12px;
+		    margin-right: 28px;
+
+			h2 {
+				.raleway;
+				font-size: 18px;
+				color :#fff;
+				font-weight: 800;
+				padding-bottom: 12px;
+			}
+
+			p {
+				.roboto;
+				font-weight: 400;
+				font-size: 12px;
+				color: #fff;
+			}
+
+			.phone {
+				font-size: 14px;
+				line-height: 27px;
+			    padding-top: 18px;
+
+			    span {
+					padding-right: 18px;
+			    }
+			}
+
+			.contact_email {
+				line-height: 27px;
+				font-size: 14px;
+
+				a {
+					color: #ede306;
+					text-transform: none;
+					padding-left: 22px;
+				}
+			}
+		}
+
+	}
+
+	.copyright-wrap {
+		width: 100%;
+		background: @main-font-color;
+		padding: 22px 0 16px;
+		margin-top: 64px;
+		p {
+			color: #dad9d9;
+			.roboto;
+			font-size: 12px;
+		}
+
 	}
 }
